src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connector-service
  namespace: 1-5
  labels:
    component: network2
spec:
  selector:
    component: network2
  ports:
    - protocol: TCP
      name: nginx
      port: 9001
      targetPort: 80
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 8080
